--- a/src/components/LegendPage/LegendPage.scss
+++ b/src/components/LegendPage/LegendPage.scss
@@ -1,6 +1,7 @@
 .legend-back {
-  float: right;
-  margin-right: 30px;
+  left: 1350px;
+  width: 130px;
+  position: relative;  
 
   .legend-item {
     width: 150px;
