--- a/src/components/MainHome/MainHome.scss
+++ b/src/components/MainHome/MainHome.scss
@@ -10,7 +10,6 @@
   .home-title {
     font-size: 25px;
     margin-left: 150px;
-    margin-top: 20px;
     height: 100px;
 
     .home-floor-title {
@@ -44,6 +43,7 @@
     position: absolute;
     top: 300px;
     left: 1460px;
+    margin-right: 20px;
   }
 
   .home-floor {
@@ -64,6 +64,8 @@
     margin-top: 30px;
     margin-left: 150px;
     width: 1290px;
+    position: relative;
+    bottom: 120px;
 
     .home-guide-kr{
       float: left;
@@ -71,5 +73,11 @@
     .home-guide-en {
       margin-left: 680px;
     }
+  }
+
+  #map {
+    margin-top: 50px;
+    margin-bottom: 50px;
+    margin-right: 50px;
   }
 }
